--- a/package.json
+++ b/package.json
@@ -1,58 +1,58 @@
 {
-  "name": "react-draft-wysiwyg",
+  "name": "@pedroguia/react-draft-wysiwyg",
   "version": "1.14.6",
   "description": "A wysiwyg on top of DraftJS.",
   "main": "dist/react-draft-wysiwyg.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jpuri/react-draft-wysiwyg.git"
+    "url": "https://github.com/pedroguia/react-draft-wysiwyg.git"
   },
   "author": "Jyoti Puri",
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/register": "^7.7.4",
-    "@storybook/react": "^5.2.8",
-    "autoprefixer": "^9.7.3",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "@babel/register": "^7.12.1",
+    "@storybook/react": "^5.3.21",
+    "autoprefixer": "^9.8.6",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "chai": "^4.2.0",
     "cross-env": "^6.0.3",
-    "css-loader": "^3.2.1",
-    "draft-js": "^0.11.2",
-    "draftjs-to-html": "^0.9.0",
+    "css-loader": "^3.6.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "draftjs-to-markdown": "^0.6.0",
     "embed-video": "^2.0.4",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "eslint": "^6.7.2",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-mocha": "^6.2.2",
-    "eslint-plugin-react": "^7.17.0",
-    "file-loader": "^5.0.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-mocha": "^6.3.0",
+    "eslint-plugin-react": "^7.21.5",
+    "file-loader": "^5.1.0",
     "flow-bin": "^0.113.0",
     "immutable": "^4.0.0-rc.12",
     "jsdom": "^15.2.1",
-    "mini-css-extract-plugin": "^0.8.0",
-    "mocha": "^6.2.2",
+    "mini-css-extract-plugin": "^0.8.2",
+    "mocha": "^6.2.3",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
-    "react": "^16.12.0",
+    "react": "^16.14.0",
     "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.12.0",
-    "react-test-renderer": "^16.12.0",
-    "rimraf": "^3.0.0",
+    "react-dom": "^16.14.0",
+    "react-test-renderer": "^16.14.0",
+    "rimraf": "^3.0.2",
     "sinon": "^7.5.0",
-    "style-loader": "^1.0.1",
+    "style-loader": "^1.3.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
-    "webpack": "^4.41.2",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10"
+    "webpack": "^4.44.2",
+    "webpack-bundle-analyzer": "^3.9.0",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "classnames": "^2.2.6",
